--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   align-items: center;
   text-align: center;
   background-color: #f8f8f8;
-  height: 100vh;
+  height: 100%;
 }
 
 .leagueContainer {
