--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
+body {
+  background-color: #f8f8f8;
+  height: 100%;
+}
+
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: #f8f8f8;
-  height: 100%;
 }
 
 .leagueContainer {
