--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,20 @@ body {
   display: flex;
   flex-direction: column;
   width: 50vw;
-  gap: 10px;
   margin: 20px;
+  gap: 15px;
+}
+
+.league {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+}
+
+.league img {
+  width: 50px;
+  height: 50px;
 }
 
 @media (max-width: 900px) {
