--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,30 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  min-height: 100vh;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin: 20px;
+}
+
+header img {
+  width: 60px;
+  height: 60px;
+}
+
+header span {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+header h1,
+header p {
+  margin: 0px;
 }
 
 .leagueContainer {
@@ -28,6 +52,19 @@ body {
 .league img {
   width: 50px;
   height: 50px;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  margin-top: auto;
+  gap: 5px;
+}
+
+footer a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #000000;
 }
 
 @media (max-width: 900px) {
