--- a/src/Match.css
+++ b/src/Match.css
@@ -7,6 +7,7 @@
   border-radius: 10px;
   background-color: #efefef;
   font-weight: bold;
+  transition: 0.3s;
 }
 
 .match img {
@@ -47,6 +48,20 @@
   gap: 5px;
   border-radius: 0px 0px 10px 10px;
   background-color: #e8e8e8;
+  display: none;
+  opacity: 0;
+  transition-property: display opacity;
+  transition-duration: 0.3s;
+  transition-behavior: allow-discrete;
+}
+
+.links.active {
+  display: flex;
+  opacity: 1;
+
+  @starting-style {
+    opacity: 0;
+  }
 }
 
 .link {
@@ -56,6 +71,7 @@
   padding: 20px;
   border-radius: 10px;
   color: #000000;
+  transition: 0.3s;
 }
 
 .link:hover {
