--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@ body {
   min-height: 100vh;
 }
 
+.error {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 header {
   display: flex;
   align-items: center;
