--- a/src/Match.css
+++ b/src/Match.css
@@ -64,11 +64,17 @@
   }
 }
 
+.links span {
+  display: flex;
+  width: 100%;
+}
+
 .link {
   width: 100%;
   box-sizing: border-box;
   text-decoration: none;
   padding: 20px;
+  margin: 0px;
   border-radius: 10px;
   color: #000000;
   transition: 0.3s;
@@ -76,6 +82,7 @@
 
 .link:hover {
   background-color: #dfdfdf;
+  cursor: pointer;
 }
 
 @media (max-width: 450px) {
