--- a/src/Match.css
+++ b/src/Match.css
@@ -70,6 +70,11 @@
 }
 
 .link {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   width: 100%;
   box-sizing: border-box;
   text-decoration: none;
@@ -78,6 +83,12 @@
   border-radius: 10px;
   color: #000000;
   transition: 0.3s;
+}
+
+.link img {
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
 }
 
 .link:hover {
