--- a/src/Match.css
+++ b/src/Match.css
@@ -64,14 +64,8 @@
   }
 }
 
-.links span {
-  display: flex;
-  width: 100%;
-}
-
 .link {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -81,14 +75,13 @@
   padding: 20px;
   margin: 0px;
   border-radius: 10px;
-  color: #000000;
+  color: inherit;
   transition: 0.3s;
 }
 
 .link img {
-  width: 30px;
-  height: 30px;
-  border-radius: 5px;
+  width: 25px;
+  height: 25px;
 }
 
 .link:hover {
