--- a/src/Match.css
+++ b/src/Match.css
@@ -5,7 +5,7 @@
   gap: 10px;
   padding: 20px;
   border-radius: 10px;
-  background-color: #efefef;
+  background-color: var(--match);
   font-weight: bold;
   transition: 0.3s;
 }
@@ -35,11 +35,6 @@
   border-radius: 10px 10px 0px 0px;
 }
 
-.match:hover {
-  background-color: #dfdfdf;
-  cursor: pointer;
-}
-
 .links {
   display: flex;
   flex-direction: column;
@@ -47,7 +42,7 @@
   padding: 10px;
   gap: 5px;
   border-radius: 0px 0px 10px 10px;
-  background-color: #e8e8e8;
+  background-color: var(--links);
   display: none;
   opacity: 0;
   transition-property: display opacity;
@@ -84,8 +79,9 @@
   height: 25px;
 }
 
-.link:hover {
-  background-color: #dfdfdf;
+.link:hover,
+.match:hover {
+  background-color: var(--hover);
   cursor: pointer;
 }
 
