--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,21 @@
   --links: #e8e8e8;
 }
 
+[theme="dark"] {
+  --background: #0d0d0d;
+  --hover: #3b3b3b;
+  --text: #f5f5f5;
+  --match: #1f1f1f;
+  --links: #2e2e2e;
+
+  .theme {
+    transform: rotate(-90deg);
+    filter: invert(1);
+  }
+}
+
 body {
-  background-color: var(--background);
   height: 100%;
-  color: var(--text);
 }
 
 .App {
@@ -18,6 +29,22 @@ body {
   align-items: center;
   text-align: center;
   min-height: 100vh;
+  background-color: var(--background);
+  color: var(--text);
+  transition-duration: 0.5s;
+}
+
+.theme {
+  position: fixed;
+  left: 10px;
+  top: 10px;
+  width: 30px;
+  height: 30px;
+  transition-duration: inherit;
+}
+
+.theme:hover {
+  cursor: pointer;
 }
 
 .error {
