--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@
     transform: rotate(-90deg);
     filter: invert(1);
   }
+
+  header img {
+    filter: brightness(0) invert(1);
+  }
 }
 
 body {
@@ -40,7 +44,7 @@ body {
   top: 10px;
   width: 30px;
   height: 30px;
-  transition-duration: inherit;
+  transition-duration: 0.5s;
 }
 
 .theme:hover {
@@ -65,6 +69,7 @@ header {
 header img {
   width: 60px;
   height: 60px;
+  transition-duration: 0.5s;
 }
 
 header span {
