--- a/src/Match.css
+++ b/src/Match.css
@@ -71,7 +71,7 @@
   margin: 0px;
   border-radius: 10px;
   color: var(--text);
-  transition-duration: inherit;
+  transition-duration: 0.5s;
 }
 
 .link img {
