--- a/src/App.css
+++ b/src/App.css
@@ -103,10 +103,8 @@ header p {
 }
 
 footer {
-  display: flex;
-  align-items: center;
+  line-height: 25px;
   margin-top: auto;
-  gap: 5px;
 }
 
 footer a {
