--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,8 @@ body {
 
 .theme {
   position: fixed;
+  top: 10px;
   right: 10px;
-  bottom: 10px;
   width: 30px;
   height: 30px;
   padding: 5px;
