--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 [theme="dark"] {
-  --background: #0d0d0d;
+  --background: #080808;
   --hover: #3b3b3b;
   --text: #f5f5f5;
   --match: #1f1f1f;
@@ -46,7 +46,7 @@ body {
   height: 30px;
   padding: 5px;
   border-radius: 5px;
-  background-color: #eaeaea;
+  background-color: #ececec;
   transition-duration: 0.5s;
 }
 
@@ -115,6 +115,22 @@ footer a {
   text-decoration: none;
   font-weight: bold;
   color: inherit;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ececec;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #cbcbcb;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #a9a9a9;
 }
 
 @media (max-width: 900px) {
