--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,21 @@
-:root {
+.App {
   --background: #f8f8f8;
   --hover: #dfdfdf;
   --text: #080808;
   --match: #efefef;
   --links: #e8e8e8;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+  background-color: var(--background);
+  color: var(--text);
+  transition-duration: 0.5s;
 }
 
-[theme="dark"] {
+.App.dark {
   --background: #080808;
   --hover: #3b3b3b;
   --text: #f5f5f5;
@@ -18,24 +27,13 @@
     filter: invert(1);
   }
 
+  .link img {
+    filter: invert(1);
+  }
+
   header img {
     filter: brightness(0) invert(1);
   }
-}
-
-body {
-  height: 100%;
-}
-
-.App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  min-height: 100vh;
-  background-color: var(--background);
-  color: var(--text);
-  transition-duration: 0.5s;
 }
 
 .theme {
