--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-.App {
+:root {
   --background: #f8f8f8;
   --hover: #dfdfdf;
   --text: #080808;
   --match: #efefef;
   --links: #e8e8e8;
+}
 
+.App {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,20 +17,12 @@
   transition-duration: 0.5s;
 }
 
-.App.dark {
+[data-theme='dark'] {
   --background: #080808;
   --hover: #3b3b3b;
   --text: #f5f5f5;
   --match: #1f1f1f;
   --links: #2e2e2e;
-
-  .theme {
-    transform: rotate(-90deg);
-  }
-
-  .theme img {
-    filter: invert(1);
-  }
 
   .link img {
     filter: invert(1);
@@ -37,29 +31,6 @@
   header img {
     filter: brightness(0) invert(1);
   }
-}
-
-.theme {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  width: 40px;
-  height: 40px;
-  border-radius: 5px;
-  background-color: var(--match);
-  transition-duration: 0.5s;
-}
-
-.theme img {
-  width: 30px;
-  height: 30px;
-  padding: 5px;
-  transition-duration: 0.5s;
-}
-
-.theme:hover {
-  background-color: var(--hover);
-  cursor: pointer;
 }
 
 .error {
@@ -125,16 +96,6 @@ footer a {
 }
 
 @media (max-width: 900px) {
-  .theme {
-    width: 35px;
-    height: 35px;
-  }
-
-  .theme img {
-    width: 25px;
-    height: 25px;
-  }
-
   .leagueContainer {
     width: 90vw;
   }
