--- a/src/components/Match/Match.css
+++ b/src/components/Match/Match.css
@@ -7,7 +7,7 @@
   border-radius: 10px;
   background-color: var(--match);
   font-weight: bold;
-  transition: 0.5s;
+  transition-duration: 0.5s;
 }
 
 .match img {
